--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ description = "Protohackers"
 
 [dependencies]
 clap = { version = "4.0.22", features = ["derive"] }
+primes = "0.3.0"
+serde = { version = "1.0.147", features = ["derive"] }
+serde_json = "1.0.87"
